JumpScript/tests/baselines/reference/interfaceMayNotBeExtendedWitACall.js
//// [interfaceMayNotBeExtendedWitACall.jump]
interface color {}

interface blue extends color() { // error

}


//// [interfaceMayNotBeExtendedWitACall.js]
